// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/CreateGroup/GroupCreateStatus renders correctly when failed props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={6000}
  message={
    <span
      id="message-id"
    >
      Nosé
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/CreateGroup/GroupCreateStatus renders correctly when success 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={6000}
  message={
    <span
      id="message-id"
    >
      Demande envoyée pour la tribu undefined
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/CreateGroup/GroupCreateStatus renders correctly without props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={6000}
  message={
    <span
      id="message-id"
    >
      Demande envoyée pour la tribu undefined
    </span>
  }
  onClose={[MockFunction]}
  open={false}
/>
`;
